[package]
name = "market_service"
version = "0.1.0"
authors = ["thewestdevop <oyeniyiadedayo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
serde  = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
uuid = { version = "0.8", features = ["serde", "v5"] }
chrono = "0.4.12"
jwt="0.9.0"
hmac="0.8.1"
sha2="0.9.1"